bug #HILL-1328 footer text aligned to the right

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -59,6 +59,6 @@ $footer--background: $body-bg;
 		width: 150px;
 	    line-height: 15px;
 	    text-align: right;
-	    margin: 4.5% 16% 0% 0%;
+	    margin: 4.5% 0% 0% 0%;
 	}
 }
